# gempost

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  gempost.yaml
examples/: gempost.yaml  index.gmi  index.tera  metadata.yaml  post.tera
examples/metadata/: my-post.complete.yaml  my-post.minimal.yaml
examples/posts/: hello-world.complete.yaml  hello-world.minimal.yaml
examples/templates/: index.complete.tera  index.gemsub.tera  post.minimal.tera  post.tera
src/: atom.xml.tera  build.rs  cli.rs  config.rs  entry.rs  entry_util.rs  error.rs  feed.rs  gempost.yaml  init.rs  main.rs  metadata.rs  metadata.yaml.tera  new.rs  page.rs  page_entry.rs  template.rs
src/examples/: gempost.yaml  index.tera  metadata.yaml  page-metadata.yaml.tera  page.tera  post-metadata.yaml.tera  post.tera
testo/: gempost.yaml
testo/pages/: hello-again.yaml  hello-page.gmi  hello-page.yaml  yolo.yaml
testo/pages/new/place/for/page/: yeehaw.yaml
testo/posts/: hello-world.gmi  hello-world.yaml
testo/public/: hello-page.gmi
testo/public/posts/: atom.xml  hello-world.gmi  index.gmi
testo/static/: index.gmi
testo/templates/: index.tera  page.tera
