[package]
name = "gempost"
version = "0.3.0"
edition = "2021"
description = "A simple static site generator for creating a blog on the Gemini protocol"
authors = ["Lark <lark@lark.gay>"]
homepage = "https://github.com/justlark/gempost"
repository = "https://github.com/justlark/gempost"
readme = "README.md"
license = "MIT"
keywords = ["gemini", "gemlog"]
categories = ["command-line-utilities"]
rust-version = "1.74.0"

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["alloc"] }
clap = { version = "4.4.13", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.11"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
tera = "1.19.1"
thiserror = "1.0.56"
url = "2.5.0"
uuid = { version = "1.7.0", features = ["v4"] }
walkdir = "2.5.0"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
